src/test/deca/codegen/valid/no-objects/mix_minus.deca
// Description:
//    Minus mixed.
//
// Resultats:
//    -2
//
// Historique:
//    cree le 08/01/2022

{
    int x = -1 -1 ;
    println(x);
}
