src/test/deca/codegen/invalid/no-objects/overflow_divide.deca
// Description:
//    Test d'une divide de flottant jusqu'a overflow
//
// Resultats:
//    Erreur : débordement pendant opération arithmétique entre deux flottants.
//
// Historique:
//    cree le 15/01/2022
{
    float x = 0x1.0p-128;
    println(2/x);
}
